manifests/cincinnati/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cincinnati-go
  annotations:
    kubernetes.io/description: |
      The cincinnati-go is GoLang implementation of Cincinnati
      https://github.com/hongkailiu/test-go/tree/cincinnati-go.
