manifests/cincinnati/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cincinnati-go
  name: cincinnati
  labels:
    app: cincinnati
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cincinnati
  template:
    metadata:
      labels:
        app: cincinnati
    spec:
      containers:
      - name: git-sync
        command:
        - /git-sync
        args:
        - --repo=https://github.com/openshift/cincinnati-graph-data.git
        - --ref=master
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        - --link=cincinnati-graph-data
        image: registry.k8s.io/git-sync/git-sync:v4.6.0
        volumeMounts:
        - name: graph-data
          mountPath: /tmp/git-sync
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
      - name: cincinnati
        image: quay.io/hongkliu/test:cincinnati-go-1ddbcae
        command:
        - /usr/local/bin/cincinnati
        args:
        - --max-concurrency=2
        - --graph-file=/data/data/graph.json.gz
        - --graph-data-dir=/var/repo/cincinnati-graph-data
        - --data-dir=/data/data
        - --serving-cert-file=/etc/tls/serving-cert/tls.crt
        - --serving-key-file=/etc/tls/serving-cert/tls.key
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          requests:
            cpu: 350m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
        volumeMounts:
        - mountPath: /etc/tls/serving-cert
          name: serving-cert
          readOnly: true
        - name: graph-data
          mountPath: /var/repo
          readOnly: true
        - name: data
          mountPath: /data
      volumes:
      - name: serving-cert
        secret:
          secretName: cincinnati-serving-cert
      - name: graph-data
        emptyDir: {}
      - name: data
        emptyDir: {}
