manifests/cincinnati/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cincinnati
  namespace: cincinnati-go
  labels:
    app: cincinnati
spec:
  selector:
    app: cincinnati
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
