manifests/cincinnati/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cincinnati
  namespace: cincinnati-go
  labels:
    app: cincinnati
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
spec:
  to:
    kind: Service
    name: cincinnati
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
